--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for App-File-Grepper
 
+1.00	2016-08-29
+	Eliminate obsoleted File::Find option chdir.
+
 0.07	2013-05-14
 	(script) UTF-8 decode pattern.
 
